# cw-countdown-days

./: cwplugin.json  pyproject.toml
qml/: countdowndays.qml
