[project]
name = "com-rinlit-countdowndays"
version = "1.0.1"
description = "Class Widgets 2 倒计日插件 / Countdown Days Plugin"
authors = [
    {name = "RinLit"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["class-widgets-sdk"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
